@@ -1,9 +1,9 @@
 FROM gradle:7.5.1-jdk17 AS build
 COPY --chown=gradle:gradle . /home/gradle/src
 WORKDIR /home/gradle/src
-RUN gradle build --no-daemon
+RUN gradle build --no-daemon -x test
 
-FROM openjdk:17-alpine
+FROM eclipse-temurin:17-jre-alpine
 
 EXPOSE 8080
 
@@ -11,4 +11,6 @@ RUN mkdir /app
 
 COPY --from=build /home/gradle/src/build/libs/*.jar app/
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/*SNAPSHOT.jar"]
+RUN ls app/
+
+ENTRYPOINT ["java","-jar","/app/dockertest-0.0.1-SNAPSHOT.jar"]
